--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
   </div>  
 <!-- </div> -->
 	<div class="flex-container">
-<img src = "images/companiesLogos/forbes.svg" style = "height: 100px;"/>
-	<p align="justify">
-	Even the simplest job applications can take over 3 minutes to complete. Forbe Magizine suggests that the average applicant submits over 538 application to find a $70,000 job...and you'll end up with over 1,600+ hours of wasted time! Furthermore, Forbes states that even "casual"job searches could be upto 7 or 8 hours per weel <sup><a href = "https://www.forbes.com/sites/dailymuse/2016/02/12/this-is-how-much-time-you-should-really-be-spending-on-your-job-search/?sh=3e653b82772c"> 2</a></sup>
-			</div class="flex-container">
+	  <img class="flex-item" src = "images/companiesLogos/forbes.svg" style = "height: 100px;"/>
+	  <p class="flex-item" align="justify">
+	  Even the simplest job applications can take over 3 minutes to complete. Forbe Magizine suggests that the average applicant submits over 538 application to find a $70,000 job...and you'll end up with over 1,600+ hours of wasted time! Furthermore, Forbes states that even "casual"job searches could be upto 7 or 8 hours per weel <sup><a href = "https://www.forbes.com/sites/dailymuse/2016/02/12/this-is-how-much-time-you-should-really-be-spending-on-your-job-search/?sh=3e653b82772c"> 2</a></sup>
+	</div class="flex-container">
 		<br>
 		<br>	
 	<img src = "images/companiesLogos/Payscale.svg.png" style = "float: right; height: 75; "/>Payscale listed "Online Application Forms" as the number one worst thing about searching for a job<a href = "https://www.payscale.com/career-news/2015/12/the-8-worst-things-about-the-job-search"><sup>1</sup></a>. Sites such as LinkedIn and Glassdoor are awesome because they allow you to view thousands, even tens-of thousands of job posting. However, that means you have to wade through as many postings to find the one that matches your skills, despite so called "advanced Artificial Intelegence to find those jobs- and then you have to go through the extra step of applying to a position at a company which may very well never respond to your application. All that wasted time means that you may need to apply to hundreds of position that lead nowhere. 
