--- a/index.html
+++ b/index.html
@@ -57,9 +57,10 @@
     <img class="flex-item"src="images/Product_Image_1.png" />
   </div>  
 <!-- </div> -->
+	
 	<div class="flex-container">
-	  <img class="flex-item" src = "images/companiesLogos/forbes.svg" style = "height: 100px;"/>
-	  <p class="flex-item" align="justify">
+	  <img src = "images/companiesLogos/forbes.svg" />
+	  <p align="justify">
 	  Even the simplest job applications can take over 3 minutes to complete. Forbe Magizine suggests that the average applicant submits over 538 application to find a $70,000 job...and you'll end up with over 1,600+ hours of wasted time! Furthermore, Forbes states that even "casual"job searches could be upto 7 or 8 hours per weel <sup><a href = "https://www.forbes.com/sites/dailymuse/2016/02/12/this-is-how-much-time-you-should-really-be-spending-on-your-job-search/?sh=3e653b82772c"> 2</a></sup>
 	</div class="flex-container">
 		<br>
