--- a/index.html
+++ b/index.html
@@ -69,13 +69,21 @@
 	<img src = "images/companiesLogos/Payscale.svg.png" style = "float: right; height: 75; "/>Payscale listed "Online Application Forms" as the number one worst thing about searching for a job<a href = "https://www.payscale.com/career-news/2015/12/the-8-worst-things-about-the-job-search"><sup>1</sup></a>. Sites such as LinkedIn and Glassdoor are awesome because they allow you to view thousands, even tens-of thousands of job posting. However, that means you have to wade through as many postings to find the one that matches your skills, despite so called "advanced Artificial Intelegence to find those jobs- and then you have to go through the extra step of applying to a position at a company which may very well never respond to your application. All that wasted time means that you may need to apply to hundreds of position that lead nowhere. 
 	</div>	
 		<br>
-		<br>
-	<p align="justify">
-	<img src = "images/companiesLogos/usnews.png" style = "float: left; height: 75; "/>U.S. News even goes as far to say:
-		
-		"</p><blockquote>Online application systems that barely work. While online application forms have made things more convenient for employers, job-seekers report regularly running into systems that won't upload their resumes, ask yes/no questions that don't fit many candidates' situations, and require information that few have on hand (like a high school GPA or the exact date you started a job 15 years ago). And when candidates know there's a good chance they won't even get so much as an acknowledgment, having to spend an hour wrestling with an onerous application system simply to submit a resume is an especially bitter pill to swallow.
-		</blockquote>"
-	<br<br>
+  <span>
+    <p align="justify">
+      U.S. News even goes as far to say:	
+    </p>
+  </span>
+	
+	<div>
+	  <img src = "images/companiesLogos/usnews.png" style = "float: left; height: 100; "/>
+	  <blockquote >
+	    "While online application forms have made things more convenient for employers, job-seekers report regularly running into systems that won't upload their resumes, ask yes/no questions that don't fit many candidates' situations, and require information that few have on hand (like a high school GPA or the exact date you started a job 15 years ago). And when candidates know there's a good chance they won't even get so much as an acknowledgment, having to spend an hour wrestling with an onerous application system simply to submit a resume is an especially bitter pill to swallow."
+	  </blockquote>"
+	</div>
+
+	<br>
+	<br>
 	<p>
 	Easy Apply Bot gets around all this nonsense to apply to high quality jobs. 
 	</p>	
