--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   </span>
 	
 	<div>
-	  <img src = "images/companiesLogos/usnews.jpg" style = "float: left; height: 100; weight: 200; "/>
+	  <img src = "images/companiesLogos/usnews.jpg" style = "float: left; height: 100; width: 200; "/>
 	  <blockquote >
 	    "While online application forms have made things more convenient for employers, job-seekers report regularly running into systems that won't upload their resumes, ask yes/no questions that don't fit many candidates' situations, and require information that few have on hand (like a high school GPA or the exact date you started a job 15 years ago). And when candidates know there's a good chance they won't even get so much as an acknowledgment, having to spend an hour wrestling with an onerous application system simply to submit a resume is an especially bitter pill to swallow."
 	  </blockquote>"
