--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <!-- </div> -->
 	
 	<div>
-	  <img style = "height: 100px;" src = "images/companiesLogos/forbes.svg" style = "float: left; height: 100; "/><p align="justify">Even the simplest job applications can take over 3 minutes to complete. Forbe Magizine suggests that the average applicant submits over 538 application to find a $70,000 job...and you'll end up with over 1,600+ hours of wasted time! Forbes found that even so-called "casual" job searches could soak up to 7 or 8 hours per week.<sup><a href = "https://www.forbes.com/sites/dailymuse/2016/02/12/this-is-how-much-time-you-should-really-be-spending-on-your-job-search/?sh=3e653b82772c"> 2</a></sup>
+	  <img src = "images/companiesLogos/forbes.svg" style = "float: left; height: 100; "/><p align="justify">Even the simplest job applications can take over 3 minutes to complete. Forbe Magizine suggests that the average applicant submits over 538 application to find a $70,000 job...and you'll end up with over 1,600+ hours of wasted time! Forbes found that even so-called "casual" job searches could soak up to 7 or 8 hours per week.<sup><a href = "https://www.forbes.com/sites/dailymuse/2016/02/12/this-is-how-much-time-you-should-really-be-spending-on-your-job-search/?sh=3e653b82772c"> 2</a></sup>
 	</div>
 	
 	<br>	
