--- a/index.html
+++ b/index.html
@@ -59,26 +59,17 @@
 <!-- </div> -->
 	
 	<div>
-	  <img src = "images/companiesLogos/forbes.svg" style = "float: left; height: 100; "/><p align="justify">Even the simplest job applications can take over 3 minutes to complete. Forbe Magizine suggests that the average applicant submits over 538 application to find a $70,000 job...and you'll end up with over 1,600+ hours of wasted time! Forbes found that even so-called "casual" job searches could soak up to 7 or 8 hours per week.<sup><a href = "https://www.forbes.com/sites/dailymuse/2016/02/12/this-is-how-much-time-you-should-really-be-spending-on-your-job-search/?sh=3e653b82772c"> 2</a></sup>
+	  <img src = "images/companiesLogos/forbes.svg" style = "float: left; height: 100; "/><p align="justify">Even the simplest job applications can take over 3 minutes to complete. Forbe Magizine suggests that the average applicant submits over 538 application to find a $70,000 job...and you'll end up with over 1,600+ hours of wasted time! Forbes found that even so-called "casual" job searches could soak up to 7 or 8 hours per week.</p align="justify"><sup><a href = "https://www.forbes.com/sites/dailymuse/2016/02/12/this-is-how-much-time-you-should-really-be-spending-on-your-job-search/?sh=3e653b82772c"> 2</a></sup>
 	</div>
 	
 	<br>	
 	
 	<div>
-	<img src = "images/companiesLogos/Payscale.svg.png" style = "float: right; height: 100; "/>Payscale listed "Online Application Forms" as the number one worst thing about searching for a job<a href = "https://www.payscale.com/career-news/2015/12/the-8-worst-things-about-the-job-search"><sup>1</sup></a>. Sites such as LinkedIn and Glassdoor are awesome because they allow you to view thousands, even tens-of thousands of job posting. However, that means you have to wade through as many postings to find the one that matches your skills, despite so called "advanced Artificial Intelegence to find those jobs- and then you have to go through the extra step of applying to a position at a company which may very well never respond to your application. All that wasted time means that you may need to apply to hundreds of position that lead nowhere. 
+	<img src = "images/companiesLogos/Payscale.svg.png" style = "float: right; height: 100; "/><p align="justify">Payscale listed "Online Application Forms" as the number one worst thing about searching for a job<a href = "https://www.payscale.com/career-news/2015/12/the-8-worst-things-about-the-job-search"><sup>1</sup></a>. Sites such as LinkedIn and Glassdoor are awesome because they allow you to view thousands, even tens-of thousands of job posting. However, that means you have to wade through as many postings to find the one that matches your skills, despite so called "advanced Artificial Intelegence to find those jobs- and then you have to go through the extra step of applying to a position at a company which may very well never respond to your application. All that wasted time means that you may need to apply to hundreds of position that lead nowhere. </p align="justify">
 	</div>	
 		<br>
-  <span>
-    <p align="justify">
-      U.S. News even goes as far to say:	
-    </p>
-  </span>
-	
-	<div>
-	  <img src = "images/companiesLogos/usnews.jpg" style = "float: left; height: 100; width: 200; "/>
-	  <blockquote >
-	    "While online application forms have made things more convenient for employers, job-seekers report regularly running into systems that won't upload their resumes, ask yes/no questions that don't fit many candidates' situations, and require information that few have on hand (like a high school GPA or the exact date you started a job 15 years ago). And when candidates know there's a good chance they won't even get so much as an acknowledgment, having to spend an hour wrestling with an onerous application system simply to submit a resume is an especially bitter pill to swallow."
-	  </blockquote>"
+  <div>
+	  <img src = "images/companiesLogos/usnews.jpg" style = "float: left; height: 100; width: 200; "/><p align="justify">     U.S. News even goes as far to say: "While online application forms have made things more convenient for employers, job-seekers report regularly running into systems that won't upload their resumes, ask yes/no questions that don't fit many candidates' situations, and require information that few have on hand (like a high school GPA or the exact date you started a job 15 years ago). And when candidates know there's a good chance they won't even get so much as an acknowledgment, having to spend an hour wrestling with an onerous application system simply to submit a resume is an especially bitter pill to swallow."'</p align="justify">
 	</div>
 
 	<br>
