--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
 	
 	<div>
 	  <img src = "images/companiesLogos/forbes.svg" style = "float: left; height: 100; margin: auto 15px;"/><p align="justify">Even the simplest job applications can take over 3 minutes to complete. Even if you're using LinkedIn's "Easy Apply" button, the average applicant will submit 500+ applications and will end up spending in excess of over 250+ hours of wasted time just clicking a couple of buttons! 
-		Forbes found that even so-called "casual" job searches could soak up to 7 or 8 hours per week.<sup><a href = "https://www.forbes.com/sites/dailymuse/2016/02/12/this-is-how-much-time-you-should-really-be-spending-on-your-job-search/?sh=3e653b82772c"> 2</a></sup>. More involved by searches could take 40-60 hours per week! The internet has made it increasinly easy to find job, but ever so much more difficult to spend hundres of hours in front of a computer actually searching for the perfect job. That's where The Easy Apply Bot come in!</p align="justify">
+		Forbes found that even so-called "casual" job searches could soak up to 7 or 8 hours per week.<sup><a target="_blank" href = "https://www.forbes.com/sites/dailymuse/2016/02/12/this-is-how-much-time-you-should-really-be-spending-on-your-job-search/?sh=3e653b82772c"> 2</a></sup>. More involved by searches could take 40-60 hours per week! The internet has made it increasinly easy to find job, but ever so much more difficult to spend hundres of hours in front of a computer actually searching for the perfect job. That's where The Easy Apply Bot come in!</p align="justify">
 	</div>
 	
 	<div>
-	<img src = "images/companiesLogos/Payscale.svg.png" style = "float: right; height: 100; margin: auto auto auto 15px ;"/><p align="justify">Payscale listed "Online Application Forms" as the number one worst thing about searching for a job<a href = "https://www.payscale.com/career-news/2015/12/the-8-worst-things-about-the-job-search"><sup>1</sup></a>. Sites such as LinkedIn and Glassdoor are awesome because they allow you to view thousands, even tens-of thousands of job posting. However, that means you have to wade through as many postings to find the one that matches your skills, despite so called "advanced Artificial Intelegence to find those jobs- and then you have to go through the extra step of applying to a position at a company which may very well never respond to your application. All that wasted time means that you may need to apply to hundreds of position that lead nowhere. </p align="justify">
+	<img src = "images/companiesLogos/Payscale.svg.png" style = "float: right; height: 100; margin: auto auto auto 15px ;"/><p align="justify">Payscale listed "Online Application Forms" as the number one worst thing about searching for a job<a target="_blank" href = "https://www.payscale.com/career-news/2015/12/the-8-worst-things-about-the-job-search"><sup>1</sup></a>. Sites such as LinkedIn and Glassdoor are awesome because they allow you to view thousands, even tens-of thousands of job posting. However, that means you have to wade through as many postings to find the one that matches your skills, despite so called "advanced Artificial Intelegence to find those jobs- and then you have to go through the extra step of applying to a position at a company which may very well never respond to your application. All that wasted time means that you may need to apply to hundreds of position that lead nowhere. </p align="justify">
 	</div>	
 
  	<div>
@@ -197,7 +197,7 @@
 <br>
 <br>
 	<small>
-		*<a href= "https://bit.ly/3eIpIF7">
+		*<a target="_blank" href= "https://bit.ly/3eIpIF7">
 			Click here
 		</a>
 		for more information
