--- a/Resume_Tips_Tricks.html
+++ b/Resume_Tips_Tricks.html
@@ -1,3 +1,206 @@
 <HTML>
 
+<HEAD>
+  <link rel="stylesheet" type="text/css" href="main.css">
+  <html lang="en-US">
+
+</HEAD>
+
+<META>
+</META>
+
+<BODY>
+
+<div class = "header">
+  <div class="flex-container">
+    <br>
+    <h1 style = "width:100%;" class ="largeText">The Easy Apply Bot</h1>
+    <h3 style = "width:100%;">Easily apply to dozens of jobs just in minutes!</h3>
+  <div>
+</div class = "header">
+
+
+<div class="topnav">
+  <a href="https://reddit.com/r/wallstreetbets">Download Easy Apply Bot Now!</a>
+  <a href="#">Resume Tips & Tricks</a>
+  <a href="#">Easy Apply Bot Pro!</a>
+   <a href="https://kennected.org/can-you-get-banned-linkedin/">FAQ</a>
+</div class="topnav">
+
+<div class = "card">
+	<H3>
+		Automate the application process on LinkedIn, Glassdoor, Indeed, & more!
+	</H3>	
+	<p align="justify">
+	Whether you're unemployed or simply searching for a better job, applying to hundreds of jobs all day is the worst. Easy Apply Bot is here to change that. 
+		<br>
+		<br>
+	Instead of wading through a sea of job descriptions and then repeatedly clicking on "apply now" buttons and them mashing a never-ending series of "next" and "confirm" buttons, The Easy Apply Bot is designed to work with popular job forums such as LinkedIn, Indeed, Monster.com, and Glassdoor to automatically apply to jobs.
+		<br>
+		<br>
+	The best part? You'll never be asked to upload a resume, and then type in all the relevant work experience ever again.  
+	</p>
+		
+	
+	<div class="flex-container">
+  	  <div class="flex-item">
+	    <a href="/app/signup" class="button">
+	      Try for free
+	    </a>
+  	  </div> 
+       </div>  
+	
+<div class="flex-container">
+    <img class="flex-item"src="images/Product_Image_1.png" />
+    <img class="flex-item"src="images/Product_Image_1.png" />
+    <img class="flex-item"src="images/Product_Image_1.png" />
+    <img class="flex-item"src="images/Product_Image_1.png" />
+  </div>  
+<!-- </div> -->
+	
+	<div>
+	  <img src = "images/companiesLogos/forbes.svg" style = "float: left; height: 100; margin: auto 15px;"/><p align="justify">Even the simplest job applications can take over 3 minutes to complete. Even if you're using LinkedIn's "Easy Apply" button, the average applicant will submit 500+ applications and will end up spending in excess of over 250+ hours of wasted time just clicking a couple of buttons! 
+		Forbes found that even so-called "casual" job searches could soak up to 7 or 8 hours per week.<sup><a target="_blank" href = "https://www.forbes.com/sites/dailymuse/2016/02/12/this-is-how-much-time-you-should-really-be-spending-on-your-job-search/?sh=3e653b82772c"> 2</a></sup>. More involved by searches could take 40-60 hours per week! The internet has made it increasinly easy to find job, but ever so much more difficult to spend hundres of hours in front of a computer actually searching for the perfect job. That's where The Easy Apply Bot come in!</p align="justify">
+	</div>
+	
+	<div>
+	<img src = "images/companiesLogos/Payscale.svg.png" style = "float: right; height: 100; margin: auto auto auto 15px ;"/><p align="justify">Payscale listed "Online Application Forms" as the number one worst thing about searching for a job<a target="_blank" href = "https://www.payscale.com/career-news/2015/12/the-8-worst-things-about-the-job-search"><sup>1</sup></a>. Sites such as LinkedIn and Glassdoor are awesome because they allow you to view thousands, even tens-of thousands of job posting. However, that means you have to wade through as many postings to find the one that matches your skills, despite so called "advanced Artificial Intelegence to find those jobs- and then you have to go through the extra step of applying to a position at a company which may very well never respond to your application. All that wasted time means that you may need to apply to hundreds of position that lead nowhere. </p align="justify">
+	</div>	
+
+ 	<div>
+	  <img src = "images/companiesLogos/US_News_logo.svg" style = "float: left; height: 100; margin: auto 15px;"/><p align="justify">     U.S. News even goes as far to say: "While online application forms have made things more convenient for employers, job-seekers report regularly running into systems that won't upload their resumes, ask yes/no questions that don't fit many candidates' situations, and require information that few have on hand (like a high school GPA or the exact date you started a job 15 years ago). And when candidates know there's a good chance they won't even get so much as an acknowledgment, having to spend an hour wrestling with an onerous application system simply to submit a resume is an especially bitter pill to swallow."'</p align="justify">
+	</div>
+
+	
+	<br>
+	<p>
+	Easy Apply Bot gets around all this nonsense to apply to high quality jobs. 
+	</p>	
+	
+	<div class="flex-container">
+  	  <div class="flex-item">
+	    <a href="/app/signup" class="button">
+	      Try for free
+	    </a>
+  	  </div> 
+       </div>  
+	
+	    </div>
+	
+
+	
+</div class = "card">
+<!--
+<div class = "card">
+<div class="flex-container">
+	<div class="flex-item">
+
+		<p align="justify">
+		Use our unique job application system to apply to easily find your next job and advance your career with the click of a button.
+		</p>
+		<ul>
+		<li>
+		  Automatic application tracking system
+		</li>
+		<li>
+		  Easily apply to hundreds of positions
+		</li>
+		<li>
+		  Search by job title, location, and even salary
+		</li>
+		<li>
+		  LinkedIn, Glassdoor, Indeed, Monster & more!
+		</li>
+		</ul>
+
+	</div class="flex-container">
+</div class = "card">
+-->
+	    
+<div class = "card">
+	<p align="center">
+	
+		Trusted by over 100,000 career seekers worldwide to help easily find their next job.
+ 
+	</p>
+
+<div>
+		<img class = "marginauto" src = "images/Trust_Icon.svg"  height="200" />
+	</div>
+	<p align="center">
+		Apply to thousands of jobs at top tier companies and local companies alike with the click of a button.
+	</p>
+	
+	<!-- <div id="container"> -->
+
+ 
+  <div class="flex-container">
+  
+    <img class="flex-item" src="images/companiesLogos/Capital_One_logo.svg" height="145" />
+  
+    <img class="flex-item" src="images/companiesLogos/Mitsubishi_motors_logo.svg" height="120" />
+
+    <img class="flex-item" src="images/companiesLogos/Deloitte_logo.svg"  height="150" />
+ 
+    <img class="flex-item" src="images/companiesLogos/DuPont_logo.svg"  height="150" />
+
+    <img class="flex-item" src="images/companiesLogos/General_Electric_logo.svg"  height="95" />
+
+    <img class="flex-item" src="images/companiesLogos/HomeDepot_logo.svg" height="145" />
+
+    <img class="flex-item" src="images/companiesLogos/Hulu_logo.svg" height="120" />
+
+    <img class="flex-item" src="images/companiesLogos/UPS_logo.svg" height="150" />
+
+    <img class="flex-item" src="images/companiesLogos/Target_Corporation_logo.svg"  height="150" />
+
+    <img class="flex-item" src="images/companiesLogos/Whole_Foods_Market_logo.svg" height="120" />
+  </div>
+
+	
+	
+	<div class="flex-container">
+  	  <div class="flex-item">
+	    <a href="/app/signup" class="button">
+	      Try for free
+	    </a>
+  	  </div> 
+       </div>  
+	
+</div class = "card">	
+	    
+<div class = "card">
+	<h2>Compatibility</h2>
+	<br>
+	<br>
+	<!-- Table is from: https://www.w3schools.com/tags/ref_html_browsersupport.asp -->
+	<table class="browserref">
+  	<tbody><tr>
+  	  <th style="width:20%;font-size:16px;text-align:left;">Browser</th>
+   	  <th style="width:16%;" height="25" class="bsChrome" title="Chrome"></th>
+  	  <th style="width:16%;" height="25" class="bsEdge" title="Internet Explorer / Edge"></th>
+	  <th style="width:16%;" height="25" class="bsFirefox" title="Firefox"></th>
+    	  <th style="width:16%;" height="25" class="bsSafari" title="Safari"></th>
+          <th style="width:16%;" height="25" class="bsOpera" title="Opera"></th>                
+  	</tr>
+  	<tr>
+	  <td style="text-align:left;">Supported</td>
+    	  <td style="text-align:center;">Yes</td>
+    	  <td style="text-align:center;">Soon</td>
+    	  <td style="text-align:center;">Soon</td>
+  	  <td style="text-align:center;">Soon</td>
+  	  <td style="text-align:center;">Yes*</td>
+ 	 </tr>
+	</tbody></table>
+
+
+<br>
+<br>
+
+</div class = "card">
+</BODY>
+
+<FOOTER>
+</FOOTER>
+
 </HTML>
