--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
 
 <div class="topnav">
-  <a href="https://reddit.com/r/wallstreetbets">Download Easy Apply Bot Now!</a>
-  <a href="#">Resume Tips & Tricks</a>
+  <a href="#">Download Easy Apply Bot Now!</a>
+  <a href="#Resume_Tips_Tricks.html">Resume Tips & Tricks</a>
   <a href="#">Easy Apply Bot Pro!</a>
    <a href="https://kennected.org/can-you-get-banned-linkedin/">FAQ</a>
 </div class="topnav">
