--- a/FAQ.html
+++ b/FAQ.html
@@ -1,1 +1,44 @@
 <HTML>
+
+<HEAD>
+  <link rel="stylesheet" type="text/css" href="main.css">
+  <html lang="en-US">
+
+</HEAD>
+
+<META>
+</META>
+
+<BODY>
+
+<div class = "header">
+  <div class="flex-container">
+    <br>
+    <h1 style = "width:100%;" class ="largeText">The Easy Apply Bot</h1>
+    <h3 style = "width:100%;">Easily apply to dozens of jobs just in minutes!</h3>
+  <div>
+</div class = "header">
+
+
+<div class="topnav">
+  <a href="#">Download Easy Apply Bot Now!</a>
+  <a href="#Resume_Tips_Tricks.html">Resume Tips & Tricks</a>
+  <a href="#">Easy Apply Bot Pro!</a>
+   <a href="https://kennected.org/can-you-get-banned-linkedin/">FAQ</a>
+</div class="topnav">
+
+<div class = "card">
+FAQ
+	
+</div class = "card">	
+	    
+<div class = "card">
+More information:
+
+</div class = "card">
+</BODY>
+
+<FOOTER>
+</FOOTER>
+
+</HTML>
