--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
 <div class="topnav">
   <a href="#">Download Easy Apply Bot Now!</a>
   <a href="#Resume_Tips_Tricks.html">Resume Tips & Tricks</a>
-  <a href="#">Easy Apply Bot Pro!</a>
-   <a href="https://kennected.org/can-you-get-banned-linkedin/">FAQ</a>
+  <a href="#FAQ.html">FAQ</a>
 </div class="topnav">
 
 <div class = "card">
