--- a/Resume_Tips_Tricks.html
+++ b/Resume_Tips_Tricks.html
@@ -23,8 +23,7 @@
 <div class="topnav">
   <a href="https://reddit.com/r/wallstreetbets">Download Easy Apply Bot Now!</a>
   <a href="#">Resume Tips & Tricks</a>
-  <a href="#">Easy Apply Bot Pro!</a>
-   <a href="https://kennected.org/can-you-get-banned-linkedin/">FAQ</a>
+   <a href="#FAQ.html">FAQ</a>
 </div class="topnav">
 
 <div class = "card">
