--- a/Resume_Tips_Tricks.html
+++ b/Resume_Tips_Tricks.html
@@ -21,8 +21,8 @@
 
 
 <div class="topnav">
-  <a href="https://reddit.com/r/wallstreetbets">Download Easy Apply Bot Now!</a>
-  <a href="#">Resume Tips & Tricks</a>
+  <a href="#">Download Easy Apply Bot Now!</a>
+  <a href="Resume_Tip_Tricks.html">Resume Tips & Tricks</a>
    <a href="#FAQ.html">FAQ</a>
 </div class="topnav">
 
