--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
 <div class="topnav">
   <a href="#">Download Easy Apply Bot Now!</a>
-  <a href="#Resume_Tips_Tricks.html">Resume Tips & Tricks</a>
-  <a href="#FAQ.html">FAQ</a>
+  <a href="Resume_Tips_Tricks.html">Resume Tips & Tricks</a>
+  <a href="FAQ.html">FAQ</a>
 </div class="topnav">
 
 <div class = "card">
