--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
 
 <div class="topnav">
-  <a href="LinkedInClickerPage/index.html">Download Easy Apply Bot Now!</a>
-  <a href="LinkedInClickerPage/Resume_Tips_Tricks.html">Resume Tips & Tricks</a>
-  <a href="LinkedInClickerPage/FAQ.html">FAQ</a>
+  <a href="/index/">Download Easy Apply Bot Now!</a>
+  <a href="/Resume_Tips_Tricks/">Resume Tips & Tricks</a>
+  <a href="/FAQ/">FAQ</a>
 </div class="topnav">
 
 <div class = "card">
