--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
 
 <div class="topnav">
-  <a href="/index/">Download Easy Apply Bot Now!</a>
-  <a href="/Resume_Tips_Tricks/">Resume Tips & Tricks</a>
-  <a href="/FAQ/">FAQ</a>
+  <a href="/LinkedInClickerPage/index/">Download Easy Apply Bot Now!</a>
+  <a href="/LinkedInClickerPage/Resume_Tips_Tricks/">Resume Tips & Tricks</a>
+  <a href="/LinkedInClickerPage/FAQ/">FAQ</a>
 </div class="topnav">
 
 <div class = "card">
