--- a/FAQ.html
+++ b/FAQ.html
@@ -3,7 +3,8 @@
 <HEAD>
   <link rel="stylesheet" type="text/css" href="main.css">
   <html lang="en-US">
-	      
+  <meta name="viewport" content="width=device-width, initial-scale=1"> 
+	  
 </HEAD>
 
 <META>
