--- a/FAQ.html
+++ b/FAQ.html
@@ -31,6 +31,7 @@
 
 
 
+
 <h2>Collapsibles</h2>
 
 <p>A Collapsible:</p>
@@ -71,5 +72,14 @@ for (i = 0; i < coll.length; i++) {
 </script>
 
 
+	    
+<div class = "card">
+More information:
+
+</div class = "card">
+</BODY>
+
+<FOOTER>
+</FOOTER>
 
 </HTML>
