--- a/FAQ.html
+++ b/FAQ.html
@@ -30,7 +30,7 @@
 
 
 
-
+<div class = "card">
 
 <h2>Collapsibles</h2>
 
@@ -72,6 +72,7 @@ for (i = 0; i < coll.length; i++) {
 </script>
 
 
+</div class = "card">
 	    
 <div class = "card">
 More information:
