--- a/FAQ.html
+++ b/FAQ.html
@@ -1,10 +1,7 @@
-<HTML>
-
-<HEAD>
-  <link rel="stylesheet" type="text/css" href="main.css">
-  <html lang="en-US">
-  <meta name="viewport" content="width=device-width, initial-scale=1"> 
-
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 .collapsible {
   background-color: #777;
@@ -29,31 +26,17 @@
   background-color: #f1f1f1;
 }
 </style>
-	  
+
+<!--  <link rel="stylesheet" type="text/css" href="main.css"> -->
+  <html lang="en-US">
+
 </HEAD>
 
 
 <BODY>
 
-<div class = "header">
-  <div class="flex-container">
-    <br>
-    <h1 style = "width:100%;" class ="largeText">The Easy Apply Bot</h1>
-    <h3 style = "width:100%;">Easily apply to dozens of jobs just in minutes!</h3>
-  <div>
-</div class = "header">
 
 
-<div class="topnav">
-  <a href="#">Download Easy Apply Bot Now!</a>
-  <a href="#Resume_Tips_Tricks.html">Resume Tips & Tricks</a>
-  <a href="#">Easy Apply Bot Pro!</a>
-   <a href="https://kennected.org/can-you-get-banned-linkedin/">FAQ</a>
-</div class="topnav">
-
-
-
-<div class = "card">
 
 <h2>Collapsibles</h2>
 
@@ -93,6 +76,7 @@ for (i = 0; i < coll.length; i++) {
   });
 }
 </script>
+
 
 
 </div class = "card">
