--- a/FAQ.html
+++ b/FAQ.html
@@ -26,8 +26,7 @@
   background-color: #f1f1f1;
 }
 </style>
-
-<!--  <link rel="stylesheet" type="text/css" href="main.css"> -->
+<link rel="stylesheet" type="text/css" href="main.css"> 
   <html lang="en-US">
 
 </HEAD>
