--- a/FAQ.html
+++ b/FAQ.html
@@ -34,7 +34,10 @@
 
 <BODY>
 
-
+	
+	
+	
+<div class = "card"> 
 
 
 <h2>Collapsibles</h2>
@@ -75,6 +78,8 @@ for (i = 0; i < coll.length; i++) {
   });
 }
 </script>
+
+
 
 
 
