--- a/FAQ.html
+++ b/FAQ.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
 <style>
 .collapsible {
   background-color: #777;
@@ -25,6 +26,19 @@
   overflow: hidden;
   background-color: #f1f1f1;
 }
+	
+.collapsible:after {
+  content: '\02795'; /* Unicode character for "plus" sign (+) */
+  font-size: 13px;
+  color: white;
+  float: right;
+  margin-left: 5px;
+}
+
+.active:after {
+  content: "\2796"; /* Unicode character for "minus" sign (-) */
+}
+	
 </style>
 <link rel="stylesheet" type="text/css" href="main.css"> 
   <html lang="en-US">
