--- a/FAQ.html
+++ b/FAQ.html
@@ -67,8 +67,9 @@
 <div class = "card"> 
 
 
-<h2>Collapsibles</h2>
-
+<h1>FAQ</h1>
+<p> No matter how much information we put on our website, we're sure that some questions will always remain. We are looking forward to helping you out. However, before reaching out ot us, please check the below list of our most frequently asked questiosn. This gives us more time to answer specific questions and it save you time waiting for our reply.
+	
 <p>A Collapsible:</p>
 <button type="button" class="collapsible">Open Collapsible</button>
 <div class="content">
