--- a/FAQ.html
+++ b/FAQ.html
@@ -71,24 +71,12 @@
 <p> No matter how much information we put on our website, we're sure that some questions will always remain. We are looking forward to helping you out. However, before reaching out ot us, please check the below list of our most frequently asked questiosn. This gives us more time to answer specific questions and it save you time waiting for our reply.
 	
 <p>A Collapsible:</p>
-<button type="button" class="collapsible">Open Collapsible</button>
+<button type="button" class="collapsible">Does you give to community organizations? What are your charitable giving policies?</button>
 <div class="content">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  <p>Our community impact priorities focus on getting more kids involved with computers and programming. We invest in programs that prioritize youth Science, Technology, Engineering , & Mathematics (STEM) Fields. We also support local community organizations unrelated to STEM innitiatives. As a company, we also support disaster relief and have strategic partnerships with non-profit organizations in other philanthropic areas.</p>
 </div>
 
-<p>Collapsible Set:</p>
-<button type="button" class="collapsible">Open Section 1</button>
-<div class="content">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-</div>
-<button type="button" class="collapsible">Open Section 2</button>
-<div class="content">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-</div>
-<button type="button" class="collapsible">Open Section 3</button>
-<div class="content">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-</div>
+
 
 <script>
 var coll = document.getElementsByClassName("collapsible");
