--- a/FAQ.html
+++ b/FAQ.html
@@ -71,12 +71,20 @@
 <p> No matter how much information we put on our website, we're sure that some questions will always remain. We are looking forward to helping you out. However, before reaching out ot us, please check the below list of our most frequently asked questiosn. This gives us more time to answer specific questions and it save you time waiting for our reply.
 	
 <p>A Collapsible:</p>
-<button type="button" class="collapsible">Does you give to community organizations? What are your charitable giving policies?</button>
+<button type="button" class="collapsible">What are your charitable giving policies?</button>
 <div class="content">
   <p>Our community impact priorities focus on getting more kids involved with computers and programming. We invest in programs that prioritize youth Science, Technology, Engineering , & Mathematics (STEM) Fields. We also support local community organizations unrelated to STEM innitiatives. As a company, we also support disaster relief and have strategic partnerships with non-profit organizations in other philanthropic areas.</p>
 </div>
 
+	
+<button type="button" class="collapsible">What are you doing  about climate change?
+	</button>
 
+<div class="content">Yes—and more so all the time. We believe the science is right; climate change is real. Climate change is a global challenge that requires global solutions. We have a responsibility to act and innovate for our business, for athletes and for the future of sport, which is why we are pursuing the use of renewable energy and driving energy efficiency across our business.
+We have committed to using 100 percent renewable energy in our owned and operated facilities by the end of fiscal year 2025, and we have already implemented on-site renewable energy generation at some of our largest facilities. We also enable and encourage use of renewable power in our contract factory base—since 2008, footwear manufacturers have cut energy use per unit by around 55 percent. That means today, it takes less than half the energy and generates less than half the emissions to make Nike shoes as it did eight years ago.
+
+ 	</div>
+	
 
 <script>
 var coll = document.getElementsByClassName("collapsible");
@@ -95,6 +103,9 @@ for (i = 0; i < coll.length; i++) {
 }
 </script>
 
+For general inquiries, send us an email
+
+telosbrothers@gmail.com
 
 
 
