--- a/FAQ.html
+++ b/FAQ.html
@@ -65,6 +65,17 @@
   <a href="/LinkedInClickerPage/FAQ.html">FAQ</a>
 </div class="topnav">	
 	
+
+<div class = "card">
+<H1>Installation Instructions</H1>
+
+To install, click install
+
+</div class = "card">
+	  
+	  
+	  
+	  
 <div class = "card"> 
 
 
@@ -113,10 +124,7 @@ telosbrothers@gmail.com
 
 </div class = "card">
 	    
-<div class = "card">
-More information:
 
-</div class = "card">
 </BODY>
 
 <FOOTER>
