--- a/FAQ.html
+++ b/FAQ.html
@@ -82,7 +82,7 @@ To install, click install
 <h1>FAQ</h1>
 <p> No matter how much information we put on our website, we're sure that some questions will always remain. We are looking forward to helping you out. However, before reaching out ot us, please check the below list of our most frequently asked questiosn. This gives us more time to answer specific questions and it save you time waiting for our reply.
 	
-<p>A Collapsible:</p>
+
 <button type="button" class="collapsible">What are your charitable giving policies?</button>
 <div class="content">
   <p>Our community impact priorities focus on getting more kids involved with computers and programming. We invest in programs that prioritize youth Science, Technology, Engineering , & Mathematics (STEM) Fields. We also support local community organizations unrelated to STEM innitiatives. As a company, we also support disaster relief and have strategic partnerships with non-profit organizations in other philanthropic areas.</p>
@@ -114,8 +114,8 @@ for (i = 0; i < coll.length; i++) {
   });
 }
 </script>
-
-For general inquiries, send us an email
+<br><br>
+For general inquiries, send us an email<br>
 
 telosbrothers@gmail.com
 
