--- a/FAQ.html
+++ b/FAQ.html
@@ -93,9 +93,10 @@ To install, click install
 	</button>
 
 <div class="content">
-	<p align="justify">Yes—and more so all the time. 
-		<br>We believe the science is right; climate change is real. Climate change is a global challenge that requires global solutions. We have a responsibility to act and innovate for our business, for athletes and for the future of sport, which is why we are pursuing the use of renewable energy and driving energy efficiency across our business.<br>
-We have committed to using 100 percent renewable energy in our owned and operated facilities by the end of fiscal year 2025, and we have already implemented on-site renewable energy generation at some of our largest facilities. We also enable and encourage use of renewable power in our contract factory base—since 2008, footwear manufacturers have cut energy use per unit by around 55 percent. That means today, it takes less than half the energy and generates less than half the emissions to make Nike shoes as it did eight years ago.</p align="justify">
+	<p align="justify">We believe the science is right; climate change is real. Climate change is a global challenge that requires global solutions. We have a responsibility to act and innovate for our business which is why we are pursuing the use of renewable energy and driving energy efficiency across our business.
+		<br>
+		<br>
+We have committed to using 100 percent renewable energy in our owned and operated facilities by the end of fiscal year 2025, and we have already committed to including renewable energy sources in our future endevours. At the present moment over 85% of our energy needs are met by renewable energy contracts</p align="justify">
  	</div>
 	
 
