--- a/FAQ.html
+++ b/FAQ.html
@@ -96,7 +96,7 @@ To install, click install
 	<p align="justify">We believe the science is right; climate change is real. Climate change is a global challenge that requires global solutions. We have a responsibility to act and innovate for our business which is why we are pursuing the use of renewable energy and driving energy efficiency across our business.
 		<br>
 		<br>
-We have committed to using 100 percent renewable energy in our owned and operated facilities by the end of fiscal year 2025, and we have already committed to including renewable energy sources in our future endevours. At the present moment over 85% of our energy needs are met by renewable energy contracts</p align="justify">
+We have been carbon neutral across the world since 2012 and continue to be commited to being carbon negative by 2030. Our goal is to promote sustainable development and low-carbon business practices globally through our sustainable business practices and cloud-enabled technologies.</p align="justify">
  	</div>
 	
 
