--- a/Resume_Tips_Tricks.html
+++ b/Resume_Tips_Tricks.html
@@ -22,7 +22,7 @@
 
 <div class="topnav">
   <a href="#">Download Easy Apply Bot Now!</a>
-  <a href="Resume_Tip_Tricks.html">Resume Tips & Tricks</a>
+  <a href="Resume_Tips_Tricks.html">Resume Tips & Tricks</a>
    <a href="#FAQ.html">FAQ</a>
 </div class="topnav">
 
