--- a/Resume_Tips_Tricks.html
+++ b/Resume_Tips_Tricks.html
@@ -18,12 +18,11 @@
     <h3 style = "width:100%;">Easily apply to dozens of jobs just in minutes!</h3>
   <div>
 </div class = "header">
-
-
+	  
 <div class="topnav">
   <a href="#">Download Easy Apply Bot Now!</a>
-  <a href="Resume_Tips_Tricks.html">Resume Tips & Tricks</a>
-   <a href="#FAQ.html">FAQ</a>
+  <a href="/LinkedInClickerPage/Resume_Tips_Tricks.html">Resume Tips & Tricks</a>
+  <a href="/LinkedInClickerPage/FAQ.html">FAQ</a>
 </div class="topnav">
 
 <div class = "card">
