--- a/Resume_Tips_Tricks.html
+++ b/Resume_Tips_Tricks.html
@@ -29,6 +29,8 @@
 	<H3>
 		Automate the application process on LinkedIn, Glassdoor, Indeed, & more!
 	</H3>	
+	<br><br>
+	<img src = "images/LinkedInCheatSheet.jpg">
 
 </div class = "card">
 </BODY>
