--- a/Resume_Tips_Tricks.html
+++ b/Resume_Tips_Tricks.html
@@ -191,9 +191,13 @@ input {
 	}
 }
 </style>
-<p>Our&nbsp;<a href="https://www.leisurejobs.com/staticpages/18285/the-ultimate-linkedin-cheat-sheet/" style="color: #fab834;text-decoration: underline;">ultimate Linkedin cheat sheet</a>&nbsp;will help you quickly create the best possible Linkedin profile, maximise your online visibility, build your contact list or get contacted about a new job. Whether you're looking to find out the best Linkedin profile picture size, how to get the most secure password or simply starting from the beginning, we've got you covered!</p>
+					
+<p>While the Easy Apply Bot can do a whole host of things for you, the one thing it cannot (yet) do is make your profile and resume stand out from the crowd...and unless you've been living under a rock it's quite obvious that Linkedin is the place to be seen online when it comes to jobs and new careers. Did you know that a person with a fully optimised Linkedin profile is 40 times more likely to receive job opportunities via Linkedin?! After all you are competing against over 562 million users.
+	<br> 
+	<br>
+That's why we've comiled the ultimate Linkedin cheat sheet will help you quickly create the best possible Linkedin profile, maximise your online visibility, build your contact list or get contacted about a new job. Whether you're looking to find out the best Linkedin profile picture size, how to get the most secure password or simply starting from the beginning, that will make your LinkedIn profile really shine. </p>
+					
 
-<p>Unless you've been living under a rock it's quite obvious that Linkedin is the place to be seen online when it comes to jobs and new careers. Did you know that a person with a fully optimised Linkedin profile is 40 times more likely to receive job opportunities via Linkedin?! It's probably a good idea to get a sneaky head start over the job market by checking out our Linkedin Cheat Sheet (UK version). After all you are competing against over 562 million users...</p>
 
 <div class="image-container">
 <div class="image-container-only"><img alt="The Ultimate LinkedIn Cheat Sheet 1" class="version-desk" src="https://www.leisurejobs.com/getasset/6bb02c55-2edc-4251-908d-6ef91c1d0629/"> <img alt="The Ultimate LinkedIn Cheat Sheet mobile 1" class="version-mobile" src="https://www.leisurejobs.com/getasset/4a135a8d-b35a-490f-991f-0caf2735de57/"></div>
