--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="flex-container">
     <br>
     <h1 style = "width:100%;" class ="largeText">The Easy Apply Bot</h1>
-    <h3 style = "width:100%;">Easily apply to dozens of jobs just in minutes!</h3>
+    <h3 style = "width:100%;">Automate the application process on LinkedIn, Glassdoor, Indeed, & more!</h3>
   <div>
 </div class = "header">
 
@@ -27,9 +27,7 @@
 </div class="topnav">
 
 <div class = "card">
-	<H3>
-		Automate the application process on LinkedIn, Glassdoor, Indeed, & more!
-	</H3>	
+
 	<p align="justify">
 	Whether you're unemployed or simply searching for a better job, applying to hundreds of jobs all day is the worst. Easy Apply Bot is here to change that. 
 		<br>
