--- a/index.html
+++ b/index.html
@@ -29,10 +29,7 @@
 <div class = "card">
 
 	<p align="justify">
-	Whether you're unemployed or simply searching for a better job, applying to hundreds of jobs all day is the worst. Easy Apply Bot is here to change that. 
-		<br>
-		<br>
-	Instead of wading through a sea of job descriptions and then repeatedly clicking on "apply now" buttons and them mashing a never-ending series of "next" and "confirm" buttons, The Easy Apply Bot is designed to work with popular job forums such as LinkedIn, Indeed, Monster.com, and Glassdoor to automatically apply to jobs.
+	Whether you're unemployed or simply searching for a better job, applying to hundreds of jobs all day is the worst. Easy Apply Bot is here to change that. Instead of wading through a sea of job descriptions and then repeatedly clicking on "apply now" buttons and them mashing a never-ending series of "next" and "confirm" buttons, The Easy Apply Bot is designed to work with popular job forums such as LinkedIn, Indeed, Monster.com, and Glassdoor to automatically apply to jobs.
 		<br>
 		<br>
 	The best part? You'll never be asked to upload a resume, and then type in all the relevant work experience ever again.  
