--- a/index.html
+++ b/index.html
@@ -44,6 +44,29 @@
   	  </div> 
        </div>  
 	
+	<div class="flex-container">
+  	  <div class="flex-item">
+
+Features
+
+    Automate viewing and connecting with users based on their job title and/or location!
+    Set a limit on how many connections you would like to connect with!
+    Watch the browser work away or try out Headless mode! (Currently only working in Firefox)
+    If connected store a screenshot or CSV of a users profile!
+    Able to retrive user company about 70% of the time! (Still working on this!)
+    If you have any suggestions open an issue and I or a contributor will gladly do our best to implement it if it aligns with the goals of the project!
+
+  	  </div> 
+       </div>  	
+	
+	
+	
+	
+	
+	
+	
+	
+	
 <div class="flex-container">
     <img class="flex-item"src="images/Product_Image_1.png" />
     <img class="flex-item"src="images/Product_Image_1.png" />
