--- a/index.html
+++ b/index.html
@@ -50,11 +50,12 @@
 <ul>
      <li>Automate viewing and connecting with users based on their job title and/or location!</li>
      <li>Set a limit on how many connections you would like to connect with!</li>
-     <li>Watch the browser work away or try out Headless mode! (Currently only working in Firefox)</li>
-     <li>If connected store a screenshot or CSV of a users profile!</li>
+     <li>Watch the browser work away or try out Background mode!*</li>
+      <li>If connected store a screenshot or CSV of a users profile!</li>
      <li>Able to retrive user company about 70% of the time! (Still working on this!)</li>
      <li>If you have any suggestions open an issue and I or a contributor will gladly do our best to implement it if it aligns with the goals of the project!</li>
-
+	<br><br>
+	<small>Background mode Currently only working in Firefox</small>
        </div>  	
 	
 	
