--- a/index.html
+++ b/index.html
@@ -44,18 +44,36 @@
   	  </div> 
        </div>  
 	
-	<div class="flex-container">
+
 
 		<H2>Features</H2>
-<ul>
+<div style="float: left; width: 50%;">
+	<ul>
      <li>Automate viewing and connecting with users based on their job title and/or location!</li>
      <li>Set a limit on how many connections you would like to connect with!</li>
      <li>Watch the browser work away or try out Background mode!*</li>
       <li>If connected store a screenshot or CSV of a users profile!</li>
      <li>Able to retrive user company about 70% of the time! (Still working on this!)</li>
      <li>If you have any suggestions open an issue and I or a contributor will gladly do our best to implement it if it aligns with the goals of the project!</li>
-	<br><br>
+	
 </ul>
+	
+</div style="float: left; width: 50%;">
+		<ul>
+     <li>Automate viewing and connecting with users based on their job title and/or location!</li>
+     <li>Set a limit on how many connections you would like to connect with!</li>
+     <li>Watch the browser work away or try out Background mode!*</li>
+      <li>If connected store a screenshot or CSV of a users profile!</li>
+     <li>Able to retrive user company about 70% of the time! (Still working on this!)</li>
+     <li>If you have any suggestions open an issue and I or a contributor will gladly do our best to implement it if it aligns with the goals of the project!</li>
+	
+</ul>
+<div style="float: right; width: 50%;">
+
+
+<div style="float: right; width: 50%;">
+	<br><br>
+	
 	<small>Background mode Currently only working in Firefox</small>
        </div>  	
 	
