--- a/index.html
+++ b/index.html
@@ -48,30 +48,31 @@
 
 		<H2>Features</H2>
 <div style="float: left; width: 50%;">
-	<ul>
+  <ul>
      <li>Automate viewing and connecting with users based on their job title and/or location!</li>
      <li>Set a limit on how many connections you would like to connect with!</li>
      <li>Watch the browser work away or try out Background mode!*</li>
       <li>If connected store a screenshot or CSV of a users profile!</li>
-     <li>Able to retrive user company about 70% of the time! (Still working on this!)</li>
-     <li>If you have any suggestions open an issue and I or a contributor will gladly do our best to implement it if it aligns with the goals of the project!</li>
+     <li>Able to retrive user company!</li>
+
 	
-</ul>
-	
+  </ul>
 </div style="float: left; width: 50%;">
-		<ul>
+	
+<div style="float: right; width: 50%;">
+  <ul>
      <li>Automate viewing and connecting with users based on their job title and/or location!</li>
      <li>Set a limit on how many connections you would like to connect with!</li>
      <li>Watch the browser work away or try out Background mode!*</li>
       <li>If connected store a screenshot or CSV of a users profile!</li>
-     <li>Able to retrive user company about 70% of the time! (Still working on this!)</li>
-     <li>If you have any suggestions open an issue and I or a contributor will gladly do our best to implement it if it aligns with the goals of the project!</li>
+     <li>Able to retrive user company about!</li>
+
 	
-</ul>
-<div style="float: right; width: 50%;">
+  </ul>
+</div style="float: right; width: 50%;">
 
 
-<div style="float: right; width: 50%;">
+
 	<br><br>
 	
 	<small>Background mode Currently only working in Firefox</small>
