--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
 		<H2>Features</H2>
 <div style="float: left; width: 50%;">
   <ul>
-     <li>Automate viewing and connecting with users based on their job title and/or location!</li>
-     <li>Set a limit on how many connections you would like to connect with!</li>
-     <li>Watch the browser work away or try out Background mode!*</li>
-      <li>If connected store a screenshot or CSV of a users profile!</li>
-     <li>Able to retrive user company!</li>	
+    <li style="align: justify;">Automate viewing and connecting with users based on their job title and/or location!</li>
+    <li style="align: justify;">Set a limit on how many connections you would like to connect with!</li>
+    <li style="align: justify;">Watch the browser work away or try out Background mode!*</li>
+    <li style="align: justify;">If connected store a screenshot or CSV of a users profile!</li>
+    <li style="align: justify;">Able to retrive user company!</li>	
   </ul>
 </div style="float: left; width: 50%;">
 	
