--- a/FAQ.html
+++ b/FAQ.html
@@ -69,7 +69,9 @@
 <div class = "card">
 <H1>Installation Instructions</H1>
 
-To install, click install
+To install, click install.
+	
+Important: make sure that you have your Profile Viewing Setting changed from 'Anonymous' to 'Public' so LinkedIn members can see that you have visited them and can visit your profile in return. You also must change your language setting to English.
 
 </div class = "card">
 	  
