--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
 		<H2>Features</H2>
 <div>
   <ul>
-    <li>Automate viewing and connecting with users based on their job title and/or location!</li>
-    <li>Set a limit on how many connections you would like to connect with!</li>
+	  
+    <li>Apply to jobs on LinkedIn, Glassdoor, & more!</li>
+    <li>View and connect with people based on job title &/or location!</li>
+    <li>Limit how many connections you would like to connect with!</li>
     <li>Watch the browser work away or try out Background mode!*</li>
-    <li>If connected store a screenshot or CSV of a users profile!</li>
-    <li>Able to retrive user company!</li>	
-    <li>Automate viewing and connecting with users based on their job title and/or location!</li>
-    <li>Set a limit on how many connections you would like to connect with!</li>
+    <li>Store a screenshot or CSVs of a user profiles!</li>
+    <li>Able to retrive user company!</li>
     <li>Watch the browser work away or try out Background mode!*</li>
     <li>If connected store a screenshot or CSV of a users profile!</li>
     <li>Able to retrive user company about!</li>
@@ -64,9 +64,10 @@
 
 
 
-	<br><br>
+	<br>
+	<br>
 	
-	<small>Background mode Currently only working in Firefox</small>
+	<small>Background mode currently only works with Firefox</small>
 
 	
 	
