--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="flex-container">
     <br>
     <h1 style = "width:100%;" class ="largeText">The Easy Apply Bot</h1>
-    <h3 style = "width:100%;">Automate the application process on LinkedIn, Glassdoor, Indeed, & more!</h3>
+    <h3 style = "width:100%;">Automate job applications on LinkedIn, Glassdoor, Indeed, & more!</h3>
   <div>
 </div class = "header">
 
