--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <div class = "card">
 
 	<p align="justify">
-	Whether you're simply searching for a better job or you've been searching already for months - applying to hundreds of jobs all day is the worst. Easy Apply Bot is here to change that. Instead of wading through a sea of job descriptions and then repeatedly clicking on "apply now" buttons and them mashing a never-ending series of "next" and "confirm" buttons, The Easy Apply Bot is designed to work with popular job forums such as LinkedIn, Indeed, Monster.com, and Glassdoor to automatically apply to jobs.
+	Whether you're just starting to search a job or you've been searching already for months - applying to hundreds of jobs all day is the worst. Easy Apply Bot is here to change that. Instead of wading through a sea of job descriptions and then repeatedly filling out application forms, and then mashing a your way through a never-ending series of "next" and "confirm" buttons before finding out that they only are willing to pay 50% of your diresired pay, The Easy Apply Bot is designed to work with popular job forums such as LinkedIn, Indeed, Monster.com, and Glassdoor to automatically apply to jobs, connect with people, and so much more!
 		<br>
 		<br>
 	The best part? You'll never be asked to upload a resume, and then type in all the relevant work experience ever again.  
