--- a/index.html
+++ b/index.html
@@ -52,13 +52,10 @@
 	  
     <li>Apply to jobs on LinkedIn, Glassdoor, & more!</li>
     <li>View and connect with people based on job title &/or location!</li>
-    <li>Limit how many connections you would like to connect with!</li>
     <li>Watch the browser work away or try out Background mode!*</li>
     <li>Store a screenshot or CSVs of a user profiles!</li>
-    <li>Able to retrive user company!</li>
-    <li>Watch the browser work away or try out Background mode!*</li>
-    <li>If connected store a screenshot or CSV of a users profile!</li>
-    <li>Able to retrive user company about!</li>
+    <li>Increase your LinkedIn profile views!</li>
+
   </ul>
 </div>
 
