--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     <li>Watch the browser work away or try out Background mode!*</li>
     <li>Store a screenshot or CSVs of a user profiles!</li>
     <li>Increase your LinkedIn profile views!</li>
+    <li>Search & apply to jobs based on Location, Salary, & Title!</li>
 
   </ul>
 </div>
