--- a/index.html
+++ b/index.html
@@ -52,11 +52,12 @@
 	  
     <li>Apply to jobs on LinkedIn, Glassdoor, & more!</li>
     <li>View and connect with people based on job title &/or location!</li>
+    <li>Works with Chrome, Firefox, Opera, & more!</li>
     <li>Watch the browser work away or try out Background mode!*</li>
     <li>Store a screenshot or CSVs of a user profiles!</li>
     <li>Increase your LinkedIn profile views!</li>
     <li>Search & apply to jobs based on Location, Salary, & Title!</li>
-
+    <li>Works on PC, Mac, & Linux systems</li>
   </ul>
 </div>
 
