--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
     <li>Watch the browser work away or try out Background mode!*</li>
     <li>Store a screenshot or CSVs of a user profiles!</li>
     <li>Increase your LinkedIn profile views!</li>
-    <li>Search & apply to jobs based on Location, Salary, & Title!</li>
-    <li>Works on PC, Mac, & Linux systems</li>
+    <li>Apply to jobs based on Location, Salary, & Title!</li>
+    <li>Works with PC, Mac, & Linux operating systems</li>
   </ul>
 </div>
 
