--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 	
 	
 <div class="flex-container">
-    <img class="flex-item"src="images/Product_Image_1.png" />
+    <img class="flex-item"src="images/app/demo.gif" />
     <img class="flex-item"src="images/Product_Image_1.png" />
     <img class="flex-item"src="images/Product_Image_1.png" />
     <img class="flex-item"src="images/Product_Image_1.png" />
