--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
 	
 	
 <div class="flex-container">
-    <img class="flex-item"src="images/app/demo.gif" />
-    <img class="flex-item"src="images/Product_Image_1.png" />
-    <img class="flex-item"src="images/Product_Image_1.png" />
-    <img class="flex-item"src="images/Product_Image_1.png" />
+    <img style = "height: 200px" src="images/app/demo.gif" />
+    <imgstyle = "height: 200px" src="images/Product_Image_1.png" />
+    <img style = "height: 200px" src="images/Product_Image_1.png" />
+    <img style = "height: 200px" src="images/Product_Image_1.png" />
   </div>  
 <!-- </div> -->
 	
