--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
 	
 	
 <div class="flex-container">
-    <img style = "height: 500px" src="images/app/demo.gif" />
-    <imgstyle = "height: 500px" src="images/Product_Image_1.png" />
-    <img style = "height: 500px" src="images/Product_Image_1.png" />
-    <img style = "height: 500px" src="images/Product_Image_1.png" />
+    <img style = "height: 500px; max-width": 80%;" src="images/app/demo.gif" />
+    <imgstyle = "height: 500px;" src="images/Product_Image_1.png" />
+    <img style = "height: 500px;" src="images/Product_Image_1.png" />
+    <img style = "height: 500px;" src="images/Product_Image_1.png" />
   </div>  
 <!-- </div> -->
 	
