--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 	
 	
 <div class="flex-container">
-    <img style = "height: 500px; max-width": 80%;" src="images/app/demo.gif" />
+    <img style = "height: 500px; max-width: 80%;" src="images/app/demo.gif" />
     <imgstyle = "height: 500px;" src="images/Product_Image_1.png" />
     <img style = "height: 500px;" src="images/Product_Image_1.png" />
     <img style = "height: 500px;" src="images/Product_Image_1.png" />
